--- a/AP2_MVC_DOTNET/AP2_MVC_DOTNET.csproj
+++ b/AP2_MVC_DOTNET/AP2_MVC_DOTNET.csproj
@@ -31,4 +31,8 @@
       <_ContentIncludedByDefault Remove="Views\Ordonnance\Details.cshtml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
