--- a/AP2_MVC_DOTNET/AP2_MVC_DOTNET.csproj
+++ b/AP2_MVC_DOTNET/AP2_MVC_DOTNET.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="itext7" Version="8.0.5" />
       <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.5" />
       <PackageReference Include="iTextSharp" Version="5.5.13.4" />
+      <PackageReference Include="MailKit" Version="4.8.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.8" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
